# ms-ai-school

./: .gitignore  readme.md
advertising/: advertising.ipynb  readme.md
ai-document/: README.md  gradio-app.ipynb
ai-language/: README.md  gradio-app.ipynb  request.ipynb
ai-search/: README.md  gradio-app.ipynb
ai-speech/: README.md  gradio-app.ipynb
ai-vision/: .gitignore  README.md  gradio-app.ipynb  opencv-face.ipynb  video-indexer.ipynb  vision-analysis.ipynb  yolov3.ipynb  yolov8.ipynb
azure-openai/: 01-REST API.ipynb  README.md  request.ipynb
baseball/: 22_군집화_프로야구_실습.ipynb  22_군집화_프로야구_실습_원본.ipynb  readme.md  silhouette_analysis.py
flask-basics/: .env  README.md  production.py  pyproject.toml  requirements.txt
flask-basics/app/: __init__.py  config.py  config_postgres.py  forms.py
flask-basics/app/database/: __init__.py  config.py
flask-basics/app/database/models/: __init__.py  answer.py  question.py  user.py
flask-basics/app/db/: __init__.py
flask-basics/app/models/: answer.py  question.py  user.py
flask-basics/app/templates/: base.html  index.html  navbar.html  star.html  update_answer_form.html  user.html
flask-basics/app/templates/auth/: sign_in.html  sign_up.html
flask-basics/app/templates/question/: question_detail.html  question_form.html  question_list.html
flask-basics/app/views/: answer_views.py  auth_views.py  board_views.py  main_views.py  question_views.py  sql_views.py  star_views.py  user_views.py
flask-basics/migrations/versions/: 43c83eb361e6_.py  9ad29fc6bb36_.py  b7dc7f5b53b3_.py  f1339347d4f9_.py
(+140 files in other folders)
