[project]
name = "flask-basics"
version = "0.1.0"
description = "MSAI Flask Basics - A simple Flask practice project"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-migrate>=4.1.0",
    "flask-wtf>=1.2.2",
    "logging>=0.4.9.6",
    "python-dotenv>=1.1.0",
]
